# dependency-injection-revisited

./: README.md
CSharp/: BookingApi.sln  Build.fsx  build.sh
CSharp/BookingApi/: BookingApi.csproj  Create.cs  Free.cs  IMaybe.cs  IMaybeVisitor.cs  IMaîtreD.cs  IReservationsInstruction.cs  IReservationsInstructionParameters.cs  IReservationsInstructionVisitor.cs  IReservationsProgram.cs  IReservationsProgramParameters.cs  IReservationsProgramVisitor.cs  IReservationsRepository.cs  IsReservationInFuture.cs  Just.cs  Maybe.cs  MaîtreD.cs  Nothing.cs  Pure.cs  ReadReservations.cs  Reservation.cs  ReservationsInstruction.cs  ReservationsInstructionParameters.cs  ReservationsMaybe.cs  ReservationsProgram.cs  ReservationsProgramParameters.cs  Unit.cs  packages.config
CSharp/BookingApi.Sql/: BookingApi.Sql.csproj  BookingDbSchema.sql  SqlReservationsProgram.cs  SqlReservationsProgramVisitor.cs  SqlReservationsRepository.cs
CSharp/BookingApi.SqlTests/: BookingApi.SqlTests.csproj  ConnectionStrings.cs  SqlReservationsProgramTests.cs  SqlReservationsProgramVisitorTests.cs  SqlReservationsRepositoryTests.cs  UseDatabaseAttribute.cs
CSharp/BookingApi.UnitTests/: BookingApi.UnitTests.csproj  BookingApiTestConventionsAttribute.cs  MaîtreDTests.cs  ReservationsProgram.cs  StubReservationsVisitor.cs  app.config  packages.config
FSharp/: BookingApi.sln
FSharp/BookingApi.UnitTests/: AssemblyInfo.fs  BookingApi.UnitTests.fsproj  Gen.fs  Tests.fs  (+1 more)
Haskell/: .gitignore  BookingApi.cabal  stack.yaml
Haskell/app/: Main.hs
Haskell/src/: BookingApi.hs
Haskell/test/: Spec.hs
(+9 files in other folders)
