name:                BookingApi
version:             0.1.0.0
-- synopsis:
-- description:
author:              Mark Seemann
copyright:           2018 Mark Seemann
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     BookingApi
  build-depends:       base >= 4.7 && < 5
                     , time
                     , free
                     , transformers
  default-language:    Haskell2010

executable BookingApi-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , time
                     , free
                     , transformers
                     , BookingApi
  default-language:    Haskell2010

test-suite BookingApi-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , time
                     , free
                     , transformers
                     , BookingApi
                     , test-framework
                     , test-framework-quickcheck2
                     , QuickCheck
                     , quickcheck-instances
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
